# university_labs

./: LICENSE  README.md
Architecture of computing systems [3d semester]/lab1_benchmark/: CMakeLists.txt  Dockerfile  README.md  code.cpp  codegen.cpp  drafts.h  main.cpp  measure.cpp  measures.h  report.md  tests.cpp
Architecture of computing systems [3d semester]/lab1_benchmark/src/: codegen.cpp  drafts.h  main.cpp  measures.h  tests.cpp
Architecture of computing systems [3d semester]/lab2_CPU/: README.md  code.py  commands.com
Architecture of computing systems [3d semester]/lab3_FPU/: README.md  command.com  commands.com  main.py
Object-oriented programming [3d semester]/: README.md
Object-oriented programming [3d semester]/colloquium1_metaprogramming/: README.md  main.cpp
Object-oriented programming [3d semester]/lab1_pseudorandom/: gen.cpp  gen.h  generators.cpp  generators.h  main.cpp
Object-oriented programming [3d semester]/lab2_bignum-arithmetic/: README.md  main.cpp
Object-oriented programming [3d semester]/lab3_sfml/: README.md  configs.h  convex_hull.cpp  main.cpp  scenes.cpp  visualizer.cpp
Object-oriented programming [3d semester]/lab4_hexar/: README.md  client.cpp  client_test.cpp  hexagon.h  main.cpp  palette.h  server.cpp  server_test.cpp  switcher.cpp  test1.cpp
lab1/: README.md  code.cpp  gen.cpp  gen.h
